force-app/main/default/objects/Invoice_Line_Items__c/Invoice_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Items</label>
    <nameField>
        <displayFormat>INVL-{00}</displayFormat>
        <label>Invoice Line Items</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>