force-app/main/default/objects/Invoice_Line_Items__c/fields/GST_18_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_18_Rate__c</fullName>
    <formula>Total_Price__c  * 0.18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST 18 % Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>