force-app/main/default/objects/Invoice_Line_Items__c/fields/Price_Book_Entry__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book Entry</label>
    <referenceTo>Price_Book_entry__c</referenceTo>
    <relationshipName>PriceBookEntry</relationshipName>
    <type>Lookup</type>
</CustomField>