force-app/main/default/objects/Invoice_Line_Items__c/fields/Price_per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Sqft__c</fullName>
    <label>Price per Sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>